// Copyright 2019 Yunion
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package apis;

message SendParams {
    string Contact = 1;
    string Topic = 2;
    string Title = 3;
    string Message = 4;
    string Priority = 5;
    string RemoteTemplate = 6;
}

message UpdateConfigParams {
    map<string, string> configs = 1;
}

message UseridByMobileParams {
    string mobile = 1;
}

message Empty {
}

message UseridByMobileReply {
    string userid = 1;
}

message ValidateConfigReply {
    bool isValid = 1;
    string msg = 2;
}

message BatchSendParams {
    repeated string Contacts = 1;
    string Title = 2;
    string Message = 3;
    string Priority = 4;
    string RemoteTemplate = 5;
}

message FailedRecord {
    string Contact = 1;
    string Reason = 2;
}

message BatchSendReply {
    repeated FailedRecord FailedRecords = 1;
}

service SendAgent {
    rpc Send(SendParams) returns (Empty);
    rpc UpdateConfig(UpdateConfigParams) returns (Empty);
    rpc ValidateConfig(UpdateConfigParams) returns (ValidateConfigReply);
    rpc UseridByMobile(UseridByMobileParams) returns (UseridByMobileReply);
    rpc BatchSend (BatchSendParams) returns (BatchSendReply);
}
